feat: add non-root user security to mcp-server-kubernetes
- Add appuser (UID/GID 1001) for enhanced container security
- Change ownership of kubernetes-mcp-server binary to non-root user
- Use Red Hat UBI minimal base image security features
- Maintain Kubernetes API functionality without privilege escalation

--- a/support/docker/mcp-server-kubernetes/Dockerfile
+++ b/support/docker/mcp-server-kubernetes/Dockerfile
@@ -7,5 +7,15 @@ RUN make build
 
 FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 WORKDIR /app
-COPY --from=builder /app/kubernetes-mcp-server /app/kubernetes-mcp-server
+
+# Create non-root user for security
+RUN groupadd --system --gid 1001 appgroup && \
+    useradd --system --uid 1001 --gid 1001 --no-create-home --home-dir /app appuser && \
+    chown -R appuser:appgroup /app
+
+COPY --from=builder --chown=appuser:appgroup /app/kubernetes-mcp-server /app/kubernetes-mcp-server
+
+# Switch to non-root user
+USER appuser
+
 ENTRYPOINT ["/app/kubernetes-mcp-server"]
